<resources>
    <string name="app_name">Sky Companion</string>
    <string name="sky_logo_desc">Sky Icon</string>
    <string name="companion_app">Companion App</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    
    <string name="menu_basics">Basics</string>
    <string name="menu_spirits">Spirits</string>
    <string name="menu_quests">Quests</string>
    <string name="menu_wl">Winged Lights</string>
    <string name="menu_cr">Candle Guides</string>
    <string name="menu_eoe">Eye of Eden</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
</resources>